--- a/LaPartDieu_root/css/menu.css
+++ b/LaPartDieu_root/css/menu.css
@@ -78,6 +78,11 @@ h2 img{
 	padding: 70px 0;
 }
 
+#dinnercourse h3{
+	text-align: center;
+}
+
+
 #contents_lunch ul,
 #contents_dinner ul{
 	display: flex;
