--- a/espace_root/css/menu.css
+++ b/espace_root/css/menu.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	font-size: 0.9em;
 	width: 1000px;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 
@@ -57,6 +57,10 @@
 	margin: 0 auto 169px auto;
 }
 
+#menu p{
+	text-align: right;
+}
+
 #hair{
 	grid-row: 1/2;
 	grid-column: 1/2;
@@ -71,7 +75,7 @@
 .img{
 	grid-row: 2/3;
 	grid-column: 1/2;
-	margin: 0 auto;
+	margin: 30px auto;
 }
 
 #handeye{
