--- a/espace_root/css/footer.css
+++ b/espace_root/css/footer.css
@@ -1,7 +1,7 @@
 footer{
 	background-color: #dee4e5;
 	width: 99.3vw;
-    overflow: hidden; 
+    overflow: hidden;
 	margin: 0 auto;
 	padding: 0 ;
 	height: 365px;
@@ -80,13 +80,30 @@ footer .copyright{
 
 
 
+@media screen and (max-width: 559px) {
+
+footer{
+	width: 100%;
+}
+
+.footer_inner{
+	display: block;
+}
+
+#reserve{
+	display: none;
+}
+
+footer #info{
+	margin-bottom: 5%;
+}
+
+footer h3{
+	margin-bottom: 1.5%;
+}
 
 
-
-
-
-
-
+}
 
 
 
