--- a/Xenoblade_root/css/css.css
+++ b/Xenoblade_root/css/css.css
@@ -174,6 +174,12 @@ nav a{
 
 footer{
     text-align: center;
+    width: 100%;
+    height: auto;
+}
+
+.swiper-container{
+    height: 90%;
 }
 
 
