--- a/css/css.css
+++ b/css/css.css
@@ -282,6 +282,8 @@ p{
 
 }
 
+
+
 /*work*/
 
 
@@ -468,6 +470,10 @@ p{
 		font-size: 2.3em;
 	}
 
+	#profile{
+		overflow: auto;
+	}
+
 	#profile #summary{
 		display: none;
 	}
@@ -495,6 +501,7 @@ p{
 	#profile #skill li{
 		margin-right: 5%;
 	}
+	
 
 	#work #all_contets{
 		display: block;
